add content to basic html

--- a/Work/index.html
+++ b/Work/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <h1>CONSTANT DULLAART</h1>
         <nav>
+            <p>MENU</p>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../about/index.html">About</a></li>
@@ -17,12 +19,14 @@
             </ul>
         </nav>
     </header>
-        <body>
+        <section>
             <ul>
                 <li><a href="jennifer-in-paradise/index.html">Jennifer in Paradise</a></li>
                 <li><a href="the-death-of-the-url/index.html">The Death of the URL</a></li>
                 <li><a href="the-revolving-internet/index.html">The Revolving Internet</a></li>
             </ul>
-        </body>
+            <img src="../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"><img src="../images/constantdullaart-deathofurl.webp"><img src="../images/THEREVOLVINGINTERNETCOM-2010_unique3.png">
+        </section>
+        <footer>BRADY DAUTRICH</footer>
 </body>
 </html>
