--- a/Work/the-revolving-internet/index.html
+++ b/Work/the-revolving-internet/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <h1>THE REVOLVING INTERNET</h1>
         <nav>
+            <p>MENU</p>
             <ul>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../about/index.html">About</a></li>
@@ -16,5 +18,16 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div>
+            <img src="../../images/THEREVOLVINGINTERNETCOM-2010_unique3.png" alt="">
+        </div>
+        <div>
+            <p>Dullaart critiques the overwhelming and repetitive nature of online consumption. The artwork draws attention to the constant flow of information and images on the internet, highlighting the rapid pace at which digital content is produced, consumed, and forgotten. By creating a dizzying experience for viewers, Dullaart prompts reflection on the addictive and often mindless nature of online browsing.
+                Additionally, it raises questions about the reliability and accuracy of online information. In the midst of the constant rotation, viewers may struggle to discern individual elements or discern any coherent meaning, underscoring the challenges of navigating the vast and often chaotic landscape of the internet.
+            </p>
+        </div>
+    </section>
+    <footer>BRADY DAUTRICH</footer>
 </body>
 </html>
