--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <header>
+        <h1>CONSTANT DULLAART </h1>
         <nav>
+            <p>MENU</p>
             <ul>
                 <li><a href="about/index.html">About</a></li>
                 <li><a href="Work/index.html">Work</a></li>
             </ul>
         </nav>
     </header>
+    <section>
+        <img src="images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"><img src="images/constantdullaart-deathofurl.webp"><img src="images/constantheadshot.jpeg">
+    </section>
+    <footer>
+        <p>BRADY DAUTRICH</p>
+    </footer>
 </body>
 </html>
