--- a/Work/the-death-of-the-url/index.html
+++ b/Work/the-death-of-the-url/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <h1>THE DEATH OF THE URL</h1>
         <nav>
+            <p>MENU</p>
             <ul>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../about/index.html">About</a></li>
@@ -16,5 +18,14 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div>
+            <img src="../../images/constantdullaart-deathofurl.webp" alt="">
+        </div>
+        <div>
+            <p>"The Death of the URL," a concept by Constant Dullaart, reflects on the diminishing importance of web addresses (URLs) in accessing online content. This shift is driven by factors like the dominance of social media platforms and search engines, which prioritize curated content over direct URLs. Dullaart's idea prompts reflection on how this change impacts online navigation, digital literacy, and information access, highlighting broader transformations within the digital landscape.</p>
+        </div>
+    </section>
+    <footer>BRADY DAUTRICH</footer>
 </body>
 </html>
