--- a/index.html
+++ b/index.html
@@ -5,23 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constant Dullaart</title>
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>CONSTANT DULLAART </h1>
-        <nav>
-            <p>MENU</p>
-            <ul>
-                <li><a href="about/index.html">About</a></li>
-                <li><a href="Work/index.html">Work</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <img src="images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"><img src="images/constantdullaart-deathofurl.webp"><img src="images/constantheadshot.jpeg">
-    </section>
-    <footer>
-        <p>BRADY DAUTRICH</p>
-    </footer>
+    <nav class="nav">
+        <p class="menu">MENU</p>
+        <ul>
+            <li><a href="about/index.html">ABOUT</a></li>
+            <li><a href="Work/index.html">WORK</a></li>
+        </ul>
+    </nav>
+
+    <div class="page">
+        <main>
+            <header>
+                <h1>CONSTANT DULLAART </h1>
+            </header>
+    
+            <section class="pics">
+                <img class="Jen" src="images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png">
+                <img class="URL" src="images/constantdullaart-deathofurl.webp">
+                <img class="him" src="images/constantheadshot.jpeg">
+                <p style="font-size: 40px; padding-right: 380px;">DULL-AARTIST OF THE INTERNET</p>
+            </section>
+        </main>
+    
+        <footer>
+            <div>
+                <p class="contact">Contact</p>
+            </div>
+            <div>
+                <p><strong>Email:</strong> studio@constantdullaart.com <strong>Instagram:</strong> ConstantDullaart</p>
+            </div>
+            <div>
+                <p class="co">©bradydautrich.co</p>
+            </div>
+        </footer>
+    </div>
+
 </body>
 </html>
