--- a/Work/index.html
+++ b/Work/index.html
@@ -21,9 +21,9 @@
     </header>
         <section>
             <ul>
-                <li><a href="jennifer-in-paradise/index.html">Jennifer in Paradise</a></li>
-                <li><a href="the-death-of-the-url/index.html">The Death of the URL</a></li>
-                <li><a href="the-revolving-internet/index.html">The Revolving Internet</a></li>
+                <li><a class="jen" href="jennifer-in-paradise/index.html">Jennifer in Paradise</a></li>
+                <li><a class="URL" href="the-death-of-the-url/index.html">The Death of the URL</a></li>
+                <li><a class="rev" href="the-revolving-internet/index.html">The Revolving Internet</a></li>
             </ul>
             <img src="../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"><img src="../images/constantdullaart-deathofurl.webp"><img src="../images/THEREVOLVINGINTERNETCOM-2010_unique3.png">
         </section>
