--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
     </header>
     <section>
         <p>Constant Dullaart, born September 27, 1979, in Leiderdorp, Netherlands, is a Dutch conceptual artist known for his digital artworks. His pieces often critique online platforms and explore themes like internet culture and surveillance. Dullaart's interventions in social media and his experimentation with various digital mediums have earned him international recognition, with exhibitions at institutions like the New Museum in New York and the Venice Biennale.</p>
-        <img src="../images/constantheadshot.jpeg">
+        <img class="him" src="../images/constantheadshot.jpeg">
     </section>
     <footer>
         <p>BRADY DAUTRICH</p>
