add more css + some media for mobile

--- a/Work/index.html
+++ b/Work/index.html
@@ -7,26 +7,40 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <header>
-        <h1>CONSTANT DULLAART</h1>
-        <nav>
-            <p>MENU</p>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about/index.html">About</a></li>
-                <li><a href="index.html">Work</a></li>
-                
-            </ul>
-        </nav>
-    </header>
-        <section>
-            <ul>
-                <li><a class="jen" href="jennifer-in-paradise/index.html">Jennifer in Paradise</a></li>
-                <li><a class="URL" href="the-death-of-the-url/index.html">The Death of the URL</a></li>
-                <li><a class="rev" href="the-revolving-internet/index.html">The Revolving Internet</a></li>
-            </ul>
-            <img src="../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"><img src="../images/constantdullaart-deathofurl.webp"><img src="../images/THEREVOLVINGINTERNETCOM-2010_unique3.png">
-        </section>
-        <footer>BRADY DAUTRICH</footer>
+    <nav class="nav">
+        <p class="menu">MENU</p>
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../about/index.html">ABOUT</a></li>
+            <li><a href="index.html">WORK</a></li>
+        </ul>
+    </nav>
+
+    <div>
+        <main>
+            <header style="position: fixed; justify-content: right; padding-left:418px; ">
+                <h1>CONSTANT DULLAART</h1>
+            </header>
+
+            <div style="filter: saturate(110%);">
+                <a href="jennifer-in-paradise/index.html"><img class="Jen" src="../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"></a>
+                <a href="the-death-of-the-url/index.html"><img class="URL" src="../images/constantdullaart-deathofurl.webp"></a>
+                <a href="the-revolving-internet/"><img class="rev" src="../images/THEREVOLVINGINTERNETCOM-2010_unique3.png"></a>
+            </div>
+        </main>
+    
+        <footer>
+            <div>
+            <p><strong>Email:</strong> studio@constantdullaart.com </p>
+            </div>
+            <div>
+                <p><strong>Instagram:</strong> ConstantDullaart</p>
+            </div>
+            <div>
+                <p class="co">©bradydautrich.co</p>
+            </div>
+        </footer>
+    </div>
+
 </body>
 </html>
