--- a/about/index.html
+++ b/about/index.html
@@ -5,25 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="../styles.css">
+    
 </head>
 <body>
-    <header>
-        <h1>CONSTANT DULLAART</h1>
-        <nav>
-            <p>MENU</p>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="../Work/index.html">Work</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <p>Constant Dullaart, born September 27, 1979, in Leiderdorp, Netherlands, is a Dutch conceptual artist known for his digital artworks. His pieces often critique online platforms and explore themes like internet culture and surveillance. Dullaart's interventions in social media and his experimentation with various digital mediums have earned him international recognition, with exhibitions at institutions like the New Museum in New York and the Venice Biennale.</p>
-        <img class="him" src="../images/constantheadshot.jpeg">
-    </section>
-    <footer>
-        <p>BRADY DAUTRICH</p>
-    </footer>
+    <nav class="nav">
+        <p class="menu">MENU</p>
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="index.html">ABOUT</a></li>
+            <li><a href="../Work/index.html">WORK</a></li>
+        </ul>
+    </nav>
+        <main>
+            <header style="position: fixed; justify-content: right; padding-left:418px; ">
+                <h1>CONSTANT DULLAART</h1>
+            </header>
+            <div style="display: flex;justify-content: space-evenly; padding-top:150px;">
+                <p style="width: 300px; position:fixed; top: 200px; left: 420px;font-size: 20px;"><strong>Constant Dullaart</strong>, born September 27, 1979, in Leiderdorp, Netherlands, is a Dutch conceptual artist known for his digital artworks. His pieces often critique online platforms and explore themes like internet culture and surveillance. Dullaart's interventions in social media and his experimentation with various digital mediums have earned him international recognition, with exhibitions at institutions like the New Museum in New York and the Venice Biennale.</p>
+                <section>
+                    <img style="height:543px;position: fixed; left: 800px; top: 150px;" src="../images/constantheadshot.jpeg">
+                </section>
+            </div>
+        </main>
+    
+        <footer>
+            <div>
+            <p><strong>Email:</strong> studio@constantdullaart.com </p>
+            </div>
+            <div>
+                <p><strong>Instagram:</strong> ConstantDullaart</p>
+            </div>
+            <div>
+                <p class="co">©bradydautrich.co</p>
+            </div>
+        </footer>
 </body>
 </html>
