--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     
         <footer>
             <div>
-                <p class="contact">Contact</p>
+            <p><strong>Email:</strong> studio@constantdullaart.com </p>
             </div>
             <div>
-                <p><strong>Email:</strong> studio@constantdullaart.com <strong>Instagram:</strong> ConstantDullaart</p>
+                <p><strong>Instagram:</strong> ConstantDullaart</p>
             </div>
             <div>
                 <p class="co">©bradydautrich.co</p>
