--- a/Work/jennifer-in-paradise/index.html
+++ b/Work/jennifer-in-paradise/index.html
@@ -7,28 +7,39 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <header>
-        <h1>JENNIFER IN PARADISE</h1>
-        <nav>
-            <p>MENU</p>
-            <ul>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="../../about/index.html">About</a></li>
-                <li><a href="../index.html">Work</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <div>
-            <img src="../../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png" alt="">
-        </div>
-        <div>
-            <p>"Jennifer in Paradise" by Constant Dullaart is a digital artwork that references the iconic image of "Jennifer in Paradise," which is widely considered to be the first Photoshopped image. The original "Jennifer in Paradise" was created by John Knoll in 1987 as a demonstration of the capabilities of the software program Adobe Photoshop. 
-                Dullaart's artwork appropriates this famous image and recontextualizes it within the realm of contemporary digital art. By referencing this seminal moment in the history of digital image manipulation, Dullaart raises questions about the nature of authenticity, authorship, and the role of technology in shaping our perceptions of reality.
+    <nav class="nav">
+        <p class="menu">MENU</p>
+        <ul>
+            <li><a href="../../index.html">HOME</a></li>
+            <li><a href="../../about/index.html">ABOUT</a></li>
+            <li><a href="../index.html">WORK</a></li>
+        </ul>
+    </nav>
+        <main>
+            <header style="position: fixed; justify-content: right; padding-left:490px; ">
+                <h1 style="font-size: 70px;">JENNIFER IN PARADISE</h1>
+            </header>
+            <div style="display: flex; position: fixed;">
+                <p style="width: 610px;font-size: 20px;padding-right: 15px;"><strong>"Jennifer in Paradise"</strong> by Constant Dullaart is a digital artwork that references the iconic image of "Jennifer in Paradise," which is widely considered to be the first Photoshopped image. The original "Jennifer in Paradise" was created by John Knoll in 1987 as a demonstration of the capabilities of the software program Adobe Photoshop. 
+                    Dullaart's artwork appropriates this famous image and recontextualizes it within the realm of contemporary digital art. By referencing this seminal moment in the history of digital image manipulation, Dullaart raises questions about the nature of authenticity, authorship, and the role of technology in shaping our perceptions of reality.
                     Dullaart explores themes such as the proliferation of digital imagery in contemporary culture and the ways in which digital manipulation can distort our understanding of truth and representation. The artwork serves as a commentary on the impact of digital technologies on visual culture and challenges viewers to reconsider their relationship with images in the digital age.
-            </p>
-        </div>
-    </section>
-    <footer>BRADY DAUTRICH</footer>
+                </p>
+                <section style="padding-right: 100px;">
+                    <img style="width:600px;position: fixed;"class="jennifer-in-paradise" src="../../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png">
+                </section>
+            </div>
+        </main>
+    
+        <footer>
+            <div>
+            <p><strong>Email:</strong> studio@constantdullaart.com </p>
+            </div>
+            <div>
+                <p><strong>Instagram:</strong> ConstantDullaart</p>
+            </div>
+            <div>
+                <p class="co">©bradydautrich.co</p>
+            </div>
+        </footer>
 </body>
 </html>
