some mobile css

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     
 </head>
 <body>
@@ -17,13 +17,13 @@
         </ul>
     </nav>
         <main>
-            <header style="position: fixed; justify-content: right; padding-left:418px; ">
+            <header>
                 <h1>CONSTANT DULLAART</h1>
             </header>
-            <div style="display: flex;justify-content: space-evenly; padding-top:150px;">
-                <p style="width: 300px; position:fixed; top: 200px; left: 420px;font-size: 20px;"><strong>Constant Dullaart</strong>, born September 27, 1979, in Leiderdorp, Netherlands, is a Dutch conceptual artist known for his digital artworks. His pieces often critique online platforms and explore themes like internet culture and surveillance. Dullaart's interventions in social media and his experimentation with various digital mediums have earned him international recognition, with exhibitions at institutions like the New Museum in New York and the Venice Biennale.</p>
+            <div>
+                <p class="about"><strong>Constant Dullaart</strong>, born September 27, 1979, in Leiderdorp, Netherlands, is a Dutch conceptual artist known for his digital artworks. His pieces often critique online platforms and explore themes like internet culture and surveillance. Dullaart's interventions in social media and his experimentation with various digital mediums have earned him international recognition, with exhibitions at institutions like the New Museum in New York and the Venice Biennale.</p>
                 <section>
-                    <img style="height:543px;position: fixed; left: 800px; top: 150px;" src="../images/constantheadshot.jpeg">
+                    <img src="../images/constantheadshot.jpeg">
                 </section>
             </div>
         </main>
