--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img class="Jen" src="images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png">
                 <img class="URL" src="images/constantdullaart-deathofurl.webp">
                 <img class="him" src="images/constantheadshot.jpeg">
-                <p style="font-size: 40px; padding-right: 380px;">DULL-AARTIST OF THE INTERNET</p>
+                <p class="aartist">DULL-AARTIST OF THE INTERNET</p>
             </section>
         </main>
     
@@ -45,6 +45,5 @@
             </div>
         </footer>
     </div>
-
 </body>
 </html>
