more mobile css 3

--- a/Work/index.html
+++ b/Work/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="nav">
+    <nav class="navi">
         <p class="menu">MENU</p>
         <ul>
             <li><a href="../index.html">HOME</a></li>
@@ -18,15 +19,15 @@
 
     <div>
         <main>
-            <header style="position: fixed; justify-content: right; padding-left:418px; ">
+            <header>
                 <h1>CONSTANT DULLAART</h1>
             </header>
 
-            <div style="filter: saturate(110%);">
+            <section class="pics" style="filter: saturate(110%);">
                 <a href="jennifer-in-paradise/index.html"><img class="Jen" src="../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"></a>
                 <a href="the-death-of-the-url/index.html"><img class="URL" src="../images/constantdullaart-deathofurl.webp"></a>
                 <a href="the-revolving-internet/"><img class="rev" src="../images/THEREVOLVINGINTERNETCOM-2010_unique3.png"></a>
-            </div>
+            </section>
         </main>
     
         <footer>
