--- a/Work/the-death-of-the-url/index.html
+++ b/Work/the-death-of-the-url/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Death of the URL</title>
     <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <nav class="nav">
+    <nav class="navi">
         <p class="menu">MENU</p>
         <ul>
             <li><a href="../../index.html">HOME</a></li>
@@ -16,17 +17,16 @@
         </ul>
     </nav>
         <main>
-            <header style="position: fixed; justify-content: right; padding-left:490px; ">
-                <h1 style="font-size: 67.5px;">THE DEATH OF THE URL</h1>
+            <header class="URLtitle">
+                <h1>THE DEATH OF THE URL</h1>
             </header>
-            <div style="display: flex; position: fixed;">
-                <p style="width: 350px;font-size: 18px; padding-right: 15px;"><strong>"The Death of the URL," </strong> a concept by Constant Dullaart, reflects on the diminishing importance of web addresses (URLs) in accessing online content. This shift is driven by factors like the dominance of social media platforms and search engines, which prioritize curated content over direct URLs. Dullaart's idea prompts reflection on how this change impacts online navigation, digital literacy, and information access, highlighting broader transformations within the digital landscape.</p>
-                <section style="padding-right: 100px;">
-                    <img style="width:600px;position: fixed;"src="../../images/constantdullaart-deathofurl.webp">
+            <div class="URLmain">
+                <p class="URLtext"><strong>"The Death of the URL," </strong> a concept by Constant Dullaart, reflects on the diminishing importance of web addresses (URLs) in accessing online content. This shift is driven by factors like the dominance of social media platforms and search engines, which prioritize curated content over direct URLs. Dullaart's idea prompts reflection on how this change impacts online navigation, digital literacy, and information access, highlighting broader transformations within the digital landscape.</p>
+                <section style="left:0px;top:0px">
+                    <img class="URLpic"src="../../images/constantdullaart-deathofurl.webp">
                 </section>
             </div>
         </main>
-    
         <footer>
             <div>
             <p><strong>Email:</strong> studio@constantdullaart.com </p>
