--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <nav class="nav">
+    <nav class="navi">
         <p class="menu">MENU</p>
         <ul>
             <li><a href="../index.html">HOME</a></li>
