--- a/Work/the-revolving-internet/index.html
+++ b/Work/the-revolving-internet/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Revolving Internet</title>
     <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <nav class="nav">
+    <nav class="navi">
         <p class="menu">MENU</p>
         <ul>
             <li><a href="../../index.html">HOME</a></li>
@@ -16,14 +17,14 @@
         </ul>
     </nav>
         <main>
-            <header style="position: fixed; justify-content: right; padding-left:490px; ">
-                <h1 style="font-size: 60px;">THE REVOLVING INTERNET</h1>
+            <header class="revtitle">
+                <h1>THE REVOLVING INTERNET</h1>
             </header>
-            <div style="display: flex; position: fixed;">
-                <p style="width: 300px;font-size: 16px; padding-right: 15px;">Dullaart uses <strong>"The Revolving Internet"</strong>to critique the overwhelming and repetitive nature of online consumption. The artwork draws attention to the constant flow of information and images on the internet, highlighting the rapid pace at which digital content is produced, consumed, and forgotten. By creating a dizzying experience for viewers, Dullaart prompts reflection on the addictive and often mindless nature of online browsing.
+            <div class="revmain">
+                <p class="revtext">Dullaart uses <strong>"The Revolving Internet"</strong>to critique the overwhelming and repetitive nature of online consumption. The artwork draws attention to the constant flow of information and images on the internet, highlighting the rapid pace at which digital content is produced, consumed, and forgotten. By creating a dizzying experience for viewers, Dullaart prompts reflection on the addictive and often mindless nature of online browsing.
                     Additionally, it raises questions about the reliability and accuracy of online information. In the midst of the constant rotation, viewers may struggle to discern individual elements or discern any coherent meaning, underscoring the challenges of navigating the vast and often chaotic landscape of the internet.</p>                    
-                <section style="padding-right: 100px;">
-                    <img style="width:600px;position: fixed;" src="../../images/THEREVOLVINGINTERNETCOM-2010_unique3.png">
+                <section style="left:0px;top:0px">
+                    <img class="revpic"src="../../images/THEREVOLVINGINTERNETCOM-2010_unique3.png">
                 </section>
             </div>
         </main>
