--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="nav">
+    <nav>
         <p class="menu">MENU</p>
         <ul>
             <li><a href="about/index.html">ABOUT</a></li>
