add tablet css 4 works

--- a/Work/index.html
+++ b/Work/index.html
@@ -16,20 +16,17 @@
             <li><a href="index.html">WORK</a></li>
         </ul>
     </nav>
-
     <div>
         <main>
             <header>
                 <h1>CONSTANT DULLAART</h1>
             </header>
-
-            <section class="pics" style="filter: saturate(110%);">
+            <section class="pics" style="filter: saturate(110%)">
                 <a href="jennifer-in-paradise/index.html"><img class="Jen" src="../images/Constant-Dullaart-Jennifer-in-Paradise-2013-ongoing-View-of-the-exhibition.png"></a>
                 <a href="the-death-of-the-url/index.html"><img class="URL" src="../images/constantdullaart-deathofurl.webp"></a>
                 <a href="the-revolving-internet/"><img class="rev" src="../images/THEREVOLVINGINTERNETCOM-2010_unique3.png"></a>
             </section>
         </main>
-    
         <footer>
             <div>
             <p><strong>Email:</strong> studio@constantdullaart.com </p>
