final tablet css

--- a/Work/the-revolving-internet/index.html
+++ b/Work/the-revolving-internet/index.html
@@ -23,7 +23,7 @@
             <div class="revmain">
                 <p class="revtext">Dullaart uses <strong>"The Revolving Internet"</strong>to critique the overwhelming and repetitive nature of online consumption. The artwork draws attention to the constant flow of information and images on the internet, highlighting the rapid pace at which digital content is produced, consumed, and forgotten. By creating a dizzying experience for viewers, Dullaart prompts reflection on the addictive and often mindless nature of online browsing.
                     Additionally, it raises questions about the reliability and accuracy of online information. In the midst of the constant rotation, viewers may struggle to discern individual elements or discern any coherent meaning, underscoring the challenges of navigating the vast and often chaotic landscape of the internet.</p>                    
-                <section style="left:0px;top:0px">
+                <section class="revpicrotate" style="left:0px;top:0px">
                     <img class="revpic"src="../../images/THEREVOLVINGINTERNETCOM-2010_unique3.png">
                 </section>
             </div>
